# 505_final_project

./: BigTableClient.h  BigTableManager.h  CMakeLists.txt  Checkpoint.h  DriveClient.h  EmailClient.h  GetHandler.cpp  GetHandler.h  HTMLtoString.cpp  HTMLtoString.h  Mail.cpp  Mail.h  Makefile  Notes.txt  Payload.h  PostHandler.cpp  PostHandler.h  Server.cpp  Server.h  Tablet.h  ThreadHandler.cpp  ThreadHandler.h  Writer.cpp  Writer.h  admin.h  bigtable_server.cpp  client  communication.h  email.h  io.h  main.cpp  sample_client.cpp  server  userHandler.h
Checkpoints/: server_0.checkpoint  server_1.checkpoint
client.dSYM/Contents/Resources/DWARF/: client
resources/: admin.html  drive.html  home.html  login.html  mail.html
server.dSYM/Contents/Resources/DWARF/: server
